# Real-Time-Edge-Detection

./: .gitignore  BUILD_INSTRUCTIONS.md  GIT_WORKFLOW.md  IMPLEMENTATION_COMPLETE.md  LICENSE  OPENCV_SETUP.md  README.md  TESTING_GUIDE.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  edge_processor.cpp  edge_processor.h  native-lib.cpp
app/src/main/java/com/example/edgedetectionviewer/: GLRenderer.kt  HttpServer.kt  MainActivity.kt  NativeLib.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-hdpi/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
web/: README.md  index.html  package.json  styles.css
web/src/: index.ts
